spacing for i frames and fonts fixed

--- a/pages/index.css
+++ b/pages/index.css
@@ -74,11 +74,12 @@
   position: absolute;
   top: 124px;
   right: 5px;
+  padding-right: 145px;
 }
 
 .header__span-accent {
   display: block;
-  font-family: "Inter";
+  font-family: "Noto Serif";
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
@@ -135,16 +136,17 @@
 
 .recipes__videos {
   max-width: 920px;
-  margin-top: 80px;
+  margin: 80px auto 0;
   display: flex;
   justify-content: space-around;
   gap: 40px;
-  position: relative;
 }
 
 .recipes__video {
   max-width: 480px;
   max-height: 273px;
+  position: relative;
+  align-items: center;
 }
 
 .recipes__videos-caption {
